Create and style button element

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="src/styles/body.css">
   <link rel="stylesheet" href="src/styles/header.css">
+  <link rel="stylesheet" href="src/styles/main.css">
   <title>Let's Go</title>
 </head>
 <body>
@@ -13,6 +14,14 @@
       <b>Let's <span>Go!</span></b>
     </p>
   </header>
+
+  <main>
+    <div class="button-container">
+      <button class="suggestions-button">
+        <b>Get 5 activities</b>
+      </button>
+    </div>
+  </main>
   
   <script></script>
 </body>
