--- a/index.html
+++ b/index.html
@@ -17,12 +17,18 @@
 
   <main>
     <div class="button-container">
-      <button class="suggestions-button">
+      <button class="suggestions-button js-suggestions-button">
         <b>Get 5 activities</b>
       </button>
     </div>
+
+    <div class="suggestions-container">
+      <div class="suggestions-card">
+
+      </div>
+    </div>
   </main>
   
-  <script></script>
+  <script src="src/scripts/button.js" type="module"></script>
 </body>
 </html>
