Generate and render HTML for activities and make it interactive. Make delete button interactive.

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
   <main>
     <div class="button-container">
-      <button class="suggestions-button js-suggestions-button">
+      <button class="activities-button js-activities-button">
         <b>Get 5 activities</b>
       </button>
     </div>
 
-    <div class="suggestions-container">
-      <div class="suggestions-card">
+    <div class="activities-container">
+      <div class="activities-card js-activities-card">
 
       </div>
     </div>
