--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <main>
     <div class="button-container">
       <button class="activities-button js-activities-button">
-        <b>Get 5 activities</b>
+        <b>Get activity</b>
       </button>
     </div>
 
