Create dropdown element for activity types

--- a/index.html
+++ b/index.html
@@ -17,6 +17,36 @@
 
   <main>
     <div class="button-container">
+      <label for="types">Choose a type:</label>
+      <select name="types">
+        <option value="education">
+          Education
+        </option>
+        <option value="recreational">
+          Recreational
+        </option>
+        <option value="social">
+          Social
+        </option>
+        <option value="diy">
+          DIY
+        </option>
+        <option value="charity">
+          Charity
+        </option>
+        <option value="cooking">
+          Cooking
+        </option>
+        <option value="relaxation">
+          Relaxation
+        </option>
+        <option value="music">
+          Music
+        </option>
+        <option value="busywork">
+          Busywork
+        </option>
+      </select>
       <button class="activities-button js-activities-button">
         <b>Get activity</b>
       </button>
