Make tab styling change when clicked

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="src/styles/body.css">
   <link rel="stylesheet" href="src/styles/header.css">
-  <link rel="stylesheet" href="src/styles/main.css">
+  <link rel="stylesheet" href="src/styles/button.css">
   <link rel="stylesheet" href="src/styles/activities-card.css">
   <title>Let's Go</title>
 </head>
@@ -59,11 +59,11 @@
     <div class="activities-container">
       <div class="tabs-container">
         <div class="tabs-div">
-          <button class="activity-list-button js-activity-list-button active">
+          <button class="activity-list-button js-activity-list-button">
             Activities
           </button>
           <button class="completed-button js-completed-button">
-            Completed
+            Completed (0)
           </button>
         </div>
       </div>
