Make completed button interactive by generating and rendering completed activities html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="src/styles/header.css">
   <link rel="stylesheet" href="src/styles/button.css">
   <link rel="stylesheet" href="src/styles/activities-card.css">
+  <link rel="stylesheet" href="src/styles/completed-card.css">
   <title>Let's Go</title>
 </head>
 <body>
@@ -72,8 +73,7 @@
       </div>
       
 
-      <div class="activities-card js-activities-card">
-
+      <div class="activities-completed-card js-activities-completed-card">
       </div>
     </div>
   </main>
