Make checkbox interactive by generating and rendering date completed popup

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="src/styles/button.css">
   <link rel="stylesheet" href="src/styles/activities-card.css">
   <link rel="stylesheet" href="src/styles/completed-card.css">
+  <link rel="stylesheet" href="src/styles/date-container.css">
   <title>Let's Go</title>
 </head>
 <body>
@@ -77,6 +78,10 @@
       </div>
     </div>
   </main>
+
+  <dialog class="date-popup js-date-popup">
+    Hello!
+  </dialog>
   
   <script src="src/scripts/button.js" type="module"></script>
 </body>
