Make content responsive to different screen sizes

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 
   <main>
     <div class="button-container">
-      <label for="types" class="choose" id="types"><b>Choose a type:</b></label>
-      <select name="types" class="dropdown js-dropdown">
+      <label for="types" class="choose">
+        <b>Choose a type:</b>
+      </label>
+      <select name="select-type" class="dropdown js-dropdown" id="types">
         <option value="any-type">
           Any type
         </option>
@@ -79,7 +81,7 @@
   </main>
 
   <dialog class="date-popup js-date-popup">
-    Hello!
+    
   </dialog>
   
   <script src="src/scripts/button.js" type="module"></script>
